fixed text overflowing on second line on small devices

--- a/packages/scandipwa/src/component/CheckoutBilling/CheckoutBilling.style.scss
+++ b/packages/scandipwa/src/component/CheckoutBilling/CheckoutBilling.style.scss
@@ -35,7 +35,6 @@
         align-items: center;
 
         @include mobile {
-            font-size: 15px;
             margin-block-end: 28px;
         }
 
